--- a/RabbitMQ_Implementation/pom.xml
+++ b/RabbitMQ_Implementation/pom.xml
@@ -54,6 +54,13 @@
 			<artifactId>spring-rabbit-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-devtools</artifactId>
+		    <version>3.3.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
